<resources>
    <string name="app_name">AgriCompra</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="logo_agri_compra">Logo AgriCompra</string>
    <string name="login_string">Iniciar Sesión</string>
    <string name="my_bills">Mis Pedidos</string>
    <string name="buy">Comprar!</string>
    <string name="go_market">Ir al Mercado!</string>
    <string name="no_hay_elementos_disponibles">No hay elementos disponibles</string>
    <string name="buy_product">Comprar Productos</string>
    <string name="buy_dialog_string">Muchas gracias por su compra!\nEl producto se añadirá al carrito de compras</string>
    <string name="seleccione_el_proveedor_de_su_producto">Seleccione el proveedor de su producto</string>
    <string name="ingrese_el_lugar_de_entrega_del_pedido">Ingrese el lugar de entrega del pedido</string>
    <string name="lugar_de_entrega">Lugar de entrega</string>
    <string name="add_to_cart">Añadir al Carrito</string>
    <string name="my_orders">Mis pedidos</string>
    <string name="order_detail_string">Detalles del Pedido</string>
    <string name="completed_order">Pedido Completado</string>
    <string name="delivery_address">Lugar de Entrega:\n300 norte del palo de mango, Alajuela, Costa Rica</string>
    <string name="product_image">Imagen del Producto:</string>
    <string name="product_description">Descripción del producto:\nManzanas frescas de Juanito</string>
    <string name="payment_amount">Monto pagado:\n500</string>
    <string name="selected_provider">Proveedor:\nJuanito Perez</string>
    <string name="purchase_date">Fecha de compra:\n26 de Marzo 2020</string>

    <string-array name="providers">
        <item>Seleccionar Proveedor</item>
        <item>Pedrito Muñoz</item>
        <item>Juan Perez</item>
        <item>Armando Ríos</item>
        <item>Carmen Mok</item>
    </string-array>

</resources>