<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.buy.BuyFragment">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/buy_product"
            android:textColor="@color/light_black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buy_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.braintreepayments.cardform.view.CardForm
                    android:id="@+id/card_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                </com.braintreepayments.cardform.view.CardForm>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:text="@string/lugar_de_entrega" />

                <EditText
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ingrese_el_lugar_de_entrega_del_pedido"
                    android:inputType="textPostalAddress"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:id="@+id/providers_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/seleccione_el_proveedor_de_su_producto" />

                <Spinner
                    android:id="@+id/available_providers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/providers"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buy_button"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>